# marketdesign

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  converter.py  gurobi.env  pyproject.toml  requirements.txt  solver.py  web-solver.py
docs/: bidding_language.md  csv_bids.md  txt_bids.md
examples/: Lindsay2018_t1_seller_and_2_buyers.csv  Lindsay2018_t1_seller_and_2_buyers.json  Lindsay2018_t1_seller_and_2_buyers.txt  Lindsay2018_t2.1_two_demand_types.csv  Lindsay2018_t2.1_two_demand_types.json  Lindsay2018_t2.1_two_demand_types.txt  Lindsay2018_t2.2_two_demand_types_large_market.csv  Lindsay2018_t2.2_two_demand_types_large_market.json  Lindsay2018_t2.3_avoidable_costs.csv  Lindsay2018_t2.3_avoidable_costs.json  Lindsay2018_t2.3_avoidable_costs.txt  Lindsay2018_t3.1_low_vcg_rev.csv  Lindsay2018_t3.1_low_vcg_rev.json  Lindsay2018_t3.2_higher_vcg_rev.csv  Lindsay2018_t3.2_higher_vcg_rev.json  or_and_xor_bids.csv  or_and_xor_bids.json  utf-8.csv
md/: auction.py  auction_csv.py  auction_json.py  auction_txt.py  lindsay2018.py
tests/: context.py  gen_csv_from_json.py  test_auction_classes.py  test_csv.py  test_csv_examples.py  test_file_formats.py  test_json.py  test_json_examples.py  test_lindsay2018.py  test_pab.py  test_txt_parsing.py  test_vcg.py  test_winner_determination.py
web/static/: jsonapi.html  market.css
web/static/apidoc/: index.html
web/static/catchment/: example1.html  functions.js  styles.css
web/templates/: index.html  market.html  results_table.html  upload.html  wait.html
