[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketdesign"
version = "0.0.1a2"
authors = [
  { name="Luke Lindsay", email="l.lindsay@exeter.ac.uk" },
]
description = "This project is a python implementation of the market mechanism described in the paper 'Shapley value based pricing for auctions and exchanges' (Lindsay 2018)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'mip~=1.17.6',
    'chardet~=7.4.3',
    'tabulate~=0.10.0'
]

[project.urls]
"Homepage" = "https://github.com/luke777/marketdesign"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build]
include = [
  "md/*.py",
]
